--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 # ----------------------- #
 
 url: http://pierangeloc.github.io
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+title: Pierangelo's bakery
+subtitle: about software, baking, and other things worth being written down
+author: Pierangelo Cecchetto
 simple_search: https://www.google.com/search
 description:
 
@@ -33,7 +33,8 @@ destination: public
 plugins: plugins
 code_dir: downloads/code
 category_dir: blog/categories
-markdown: rdiscount
+#markdown: rdiscount
+markdown: kramdown
 rdiscount:
   extensions:
     - autolink
@@ -64,13 +65,13 @@ default_asides: [asides/recent_posts.html, asides/github.html, asides/delicious.
 # ----------------------- #
 
 # Github repositories
-github_user:
+github_user: 
 github_repo_count: 0
 github_show_profile_link: true
 github_skip_forks: true
 
 # Twitter
-twitter_user:
+twitter_user: pierangelocecc
 twitter_tweet_button: true
 
 # Google +1
@@ -91,8 +92,8 @@ delicious_user:
 delicious_count: 3
 
 # Disqus Comments
-disqus_short_name:
-disqus_show_comment_count: false
+disqus_short_name: pierangelosbakery
+disqus_show_comment_count: true 
 
 # Google Analytics
 google_analytics_tracking_id:
