--- a/_config.yml
+++ b/_config.yml
@@ -65,7 +65,7 @@ default_asides: [asides/recent_posts.html, asides/github.html, asides/delicious.
 # ----------------------- #
 
 # Github repositories
-github_user: 
+github_user: pierangeloc
 github_repo_count: 0
 github_show_profile_link: true
 github_skip_forks: true
@@ -96,7 +96,7 @@ disqus_short_name: pierangelosbakery
 disqus_show_comment_count: true 
 
 # Google Analytics
-google_analytics_tracking_id:
+google_analytics_tracking_id: UA-60511380-1
 
 # Facebook Like
 facebook_like: false
