--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 # ----------------------- #
 
 url: http://pierangeloc.github.io
-title: Pierangelo's bakery
-subtitle: about software, baking, and other things worth being written down
+title: Pierangelo Cecchetto
+subtitle: yet another blog about software (and baking)
 author: Pierangelo Cecchetto
 simple_search: https://www.google.com/search
-description:
+description: A blog about my experiences with Java/Scala/Js development, and occasionally about my experiences as a baker
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
 # You can customize the format as defined in
@@ -99,4 +99,4 @@ disqus_show_comment_count: true
 google_analytics_tracking_id: UA-60511380-1
 
 # Facebook Like
-facebook_like: false
+facebook_like: true
