--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,8 @@ description: A blog about my experiences with Java/Scala/Js development, and occ
 # http://www.ruby-doc.org/core-1.9.2/Time.html#method-i-strftime
 # Additionally, %o will give you the ordinal representation of the day
 date_format: "ordinal"
+gems:
+  - octopress-date-format
 
 # RSS / Email (optional) subscription links (change if using something like Feedburner)
 subscribe_rss: /atom.xml
